--- a/fa2024/lectures/lecture-25.qmd
+++ b/fa2024/lectures/lecture-25.qmd
@@ -1,7 +1,7 @@
 ---
 date: 11/18/2024
 lecture-id: 25
-title: Subqueries and WITH 1
+title: Subqueries and WITH 2
 ---
 
 ```{python}
@@ -17,17 +17,45 @@ housekeeping_right_column_width="40%"
 housekeeping_vertical_spacer = "25px"
 
 discussion_items = [
-    'This is a placeholder Lecture.'
+    'CMSC 427 - User Interfaces - Spring 2025',
+    '[Homework 8 - WB Regions and Income - due 11/17](https://virginiacommonwealth.instructure.com/courses/105097/assignments/966534){target="_blank"}',
+    '[Homework 9 - WB Population Analysis - due 12/8](https://virginiacommonwealth.instructure.com/courses/105097/assignments/1047918){target="_blank"}',
+    '[Keep working on your semester project!!!](https://virginiacommonwealth.instructure.com/courses/105097/assignments/966535){target="_blank"}'
 ]
 
 lecture_topics = [
-    'When ready, the complete lecture will replace this one.'
+    "[Homework 8 discussion](#homework-8-discussion)",
 ]
 ```
 
 {{< include "./_template-lecture-housekeeping.qmd" >}}
 {{< include "./_template-lecture-gantt.qmd" >}}
 
+# Homework 8 discussion
+
+## Homework 8 discussion
+
+:::: {.columns}
+::: {.column width=60%}
+[![](./assets/homework8-page.png)](https://virginiacommonwealth.instructure.com/courses/105097/assignments/966534){target="_blank"}
+:::
+::: {.column width=40%}
+### Learning Objectives
+
+* A full exploration of `SELECT`
+
+* A full exploration of subqueries and CTEs
+
+* Introduction to data analysis
+
+### Data Source
+
+* [World Bank Indicators](https://data.worldbank.org/indicator){target="_blank"}
+
+:::
+::::
+
+<center>We'll jump to the command line to get the project started!</center>
 
 
 {{< include "./_template-lecture-housekeeping.qmd" >}}
